better dependency injection, now runnable
